# lidar_cleaning

./: .gitignore  LICENSE  README.md  environment.yml  notes.md  pyproject.toml  setup.py
notebooks/: read_clouds.ipynb
src/: geometry.py  ghost_detection.py  io.py  visualization.py
